# python-zeep-codegen

./: .gitignore  .xsdata.xml  .zeep-codegen.example.toml  .zeep-codegen.example.yaml  IMPLEMENTATION_SUMMARY.md  ISSUE_13_RESOLUTION.md  LICENSE  MANIFEST.in  PUBLISHING.md  README.md  RESEARCH_FINDINGS.md  TASKS.md  VSCODE_EDITING_GUIDE.md  exceptions.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  research-plan.md  sample.wsdl  wsdl_to_schema.py  xsdata-research-findings.md
.github/: copilot-instructions.md
models/: __init__.py  sample_complex.py
output/sample/: pydantic_models.py  schema.json  summary.json
output/sample-complex/: pydantic_models.py  schema.json  summary.json
pipeline/: __init__.py  angular_forms.py  angular_forms.py.backup  convert.py  download.py  generate.py  schema.py  ui.py
pipeline/templates/: react-form.html  ui-readme.md
plugins/: __init__.py
tests/: conftest.py  sample.xsd  test_angular_forms.py  test_conversion.py  test_download.py  test_exceptions.py  test_generate.py  test_individual_schemas.py  test_integration.py  test_schema.py  test_temp_manager.py
utils/: __init__.py  config.py  conversion.py  plugins.py  temp_manager.py
