[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-zeep-codegen"
version = "0.1.0"
description = "Convert WSDL/XSD definitions to Pydantic models and JSON Schemas"
readme = "README.md"
authors = [
    {name = "Nigel O'Keefe", email = "nokout@example.com"}
]
maintainers = [
    {name = "Nigel O'Keefe", email = "nokout@example.com"}
]
license = {text = "MIT"}
license-files = ["LICENSE"]
keywords = [
    "wsdl",
    "xsd",
    "json-schema",
    "pydantic",
    "soap",
    "xml",
    "codegen",
    "zeep",
    "dataclass"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: WSGI",
    "Topic :: Text Processing :: Markup :: XML",
    "Typing :: Typed"
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.0,<3.0.0",
    "xsdata>=26.0,<27.0",
    "lxml>=4.9.0",
    "requests>=2.32.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "tomli>=2.0.0; python_version < '3.11'"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.11.0",
    "types-requests>=2.32.0",
    "types-pyyaml>=6.0.0",
    "ruff>=0.1.0"
]

[project.urls]
Homepage = "https://github.com/nokout/python-zeep-codegen"
Documentation = "https://github.com/nokout/python-zeep-codegen#readme"
Repository = "https://github.com/nokout/python-zeep-codegen"
Issues = "https://github.com/nokout/python-zeep-codegen/issues"
Changelog = "https://github.com/nokout/python-zeep-codegen/releases"

[project.scripts]
wsdl-to-schema = "wsdl_to_schema:main"

[tool.setuptools]
packages = ["pipeline", "plugins", "utils"]
py-modules = ["wsdl_to_schema", "exceptions"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow-running tests"
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
namespace_packages = true
ignore_missing_imports = true
show_error_codes = true
show_column_numbers = true
pretty = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.coverage.run]
source = ["pipeline", "utils", "plugins"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
